# CodingTheory

./: .gitignore  CMakeLists.txt  CodingTheory.sln
CodingTheory/: CodingTheory.vcxproj  CodingTheory.vcxproj.filters
CodingTheory/Include/: Channel.h  ColorPrinter.h  Decoder.h  Encoder.h  FiniteBody.h  FiniteField.h  Vector.h
CodingTheory/Include/Utils/: Utils.h
CodingTheory/Source/: Channel.cpp  Decoder.cpp  Encoder.cpp  FiniteBody.cpp  Main.cpp  Vector.cpp
CodingTheory/Source/Utils/: stb_image.cpp  stb_image_write.cpp
Documents/: Ataskaita.docx
